--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-background-actions": "^3.0.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.6.2",
